[project]
name = "writter-ai"
version = "0.1.0"
description = "I am here you help you to write blogs on your projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.5",
    "langgraph>=0.5.1",
    "langgraph-cli[inmem]>=0.3.4",
    "uvicorn>=0.35.0",
]
